kustomize/zigbee2mqtt/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
