kustomize/zigbee2mqtt/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "zigbee2mqtt.sjoedin.se"
      secretName: zigbee2mqtt-tls
  ingressClassName: nginx
  rules:
    - host: zigbee2mqtt.sjoedin.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 80
